--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,8 +1,6 @@
 body {
   font-family: sans-serif;
   line-height: 1;
-  margin: 1;
-  padding: 1;
   color: Black;
 }
 
@@ -10,7 +8,7 @@ body {
 header {
   background: #F5F5F5;
   color: white;
-  padding: 5;
+  margin-bottom:5px;
   text-align: center;
   height: 120px
 }
@@ -49,6 +47,7 @@ header {
 .main {
     background-color:#F5F5F5;
     text-align: center;
+    margin-bottom:5px;
 }
 
 .mainheader {
@@ -70,15 +69,15 @@ header {
 
 /* footer CSS*/
 .footer {
-    margin-top: 50px;
+    margin-top: 40px;
     text-align: center;
     
 
 }
 
 .social {
-  max-width: 64px;
-  max-height: 64px;
+  max-width: 25%;
+  max-height: 25%;
   float: left;
   margin: 20px;
   
