--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -48,6 +48,7 @@ header {
     background-color:#F5F5F5;
     text-align: center;
     margin-bottom:5px;
+    padding-bottom: 5px;
 }
 
 .mainheader {
