--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -77,15 +77,13 @@ header {
 }
 
 .social {
-  width: auto;
-  height: auto;
   display: flex;
   gap: 20px;
   
 }
 
 .social img {
-  width: 25%;
+  width: 64px;
   height:auto;
 }
 
