--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -79,6 +79,7 @@ header {
 .social {
   display: flex;
   gap: 20px;
+  width:auto;
   
 }
 
@@ -87,7 +88,7 @@ header {
   height:auto;
   display: block;
   max-width:100%;
-  
+
 }
 
 .footerlogo {
