--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -43,7 +43,7 @@ header {
 .main {
     background-color:#F5F5F5;
     text-align: center;
-    margin-bottom:10px;
+    padding-bottom:10px;
 }
 
 .mainheader {
@@ -54,7 +54,7 @@ header {
     width: auto;
     height: 100px;
     margin-bottom: 30px;
-    margin-top:30px;
+    padding-top:15px;
 }
 .p {
   font-family: sans-serif;
