--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -75,7 +75,6 @@ header {
 .social {
   display:flex;
   flex-wrap: wrap;
-  gap: 10px;
   Justify-content: left;
   align-items: left;
 }
@@ -84,6 +83,7 @@ header {
   width: 10px;
   height: 10px;
   max-width:100%;
+  max-height:100%;
   display: block;
   margin: 3px;
 
