--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -61,7 +61,12 @@ header {
   font-family: sans-serif;
 }
 .categorypicture {
-    float:left;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    max-height: 100%;
+    height: 250px;
+    width: 750px;
 }
 
 /* footer CSS*/
