--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -66,15 +66,17 @@ header {
     justify-content: center;
     align-items: center;
     max-width: 100%;
-    max-height: 100%;
-    height: 250px;
     width: 750px;
+    max-height: 100%;
+    height: auto;
     padding: 20px;
+    margin: auto;
 }
 
 .categorypicture img {
   max-width: 100%;
   height: auto;
+  object-fit:cover;
 }
 
 /* footer CSS*/
