--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -61,13 +61,11 @@ header {
   font-family: sans-serif;
 }
 .categorypicture {
-  display:flex;
-  margin: auto;
+    display:flex;
     justify-content: center;
     align-items: center;
     max-width: 100%;
     width: 750px;
-    max-height: 100%;
     height: 250px;
     padding: 20px;
     margin: auto;
@@ -75,9 +73,10 @@ header {
 }
 
 .categorypicture img {
-  max-width: 100%;
+  width: 100%;
   height: auto;
-  object-fit:cover;
+  max-height: 100%;
+  object-fit:contain;
 }
 
 /* footer CSS*/
