--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -65,6 +65,7 @@ header {
     justify-content: center;
     align-items: center;
     max-width: 100%;
+    max-height: 250px;
     width: 750px;
     height: 250px;
     padding: 20px;
