--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -62,22 +62,19 @@ header {
 }
 .categorypicture {
     display:flex;
+    flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
-    max-width: 100%;
-    max-height: 250px;
-    width: 750px;
-    height: 250px;
-    padding: 20px;
-    margin: auto;
-    overflow: hidden;
 }
 
 .categorypicture img {
-  width: 100%;
-  height: auto;
+  width: 750px;
+  height: 250px;
   max-height: 100%;
+  max-width: 100%;
   object-fit:contain;
+  overflow: hidden;
+  margin: 20px;
 }
 
 /* footer CSS*/
