--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -72,7 +72,7 @@ header {
   height: 250px;
   max-height: 100%;
   max-width: 100%;
-  object-fit:contain;
+  object-fit: fill;
   overflow: hidden;
   margin: 20px;
 }
