--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -68,11 +68,11 @@ header {
 }
 
 .categorypicture img {
-  width: 750px;
+  width: auto;
   height: 250px;
   max-height: 100%;
   max-width: 100%;
-  object-fit: fill;
+  object-fit:fill;
   overflow: hidden;
   margin: 20px;
 }
