--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -79,18 +79,18 @@ header {
 
 .button {
   background-color:#FF6600;
-  background-clip: padding-box;
   color: black;
   text-align: center;
   display: inline-block;
   justify-content: center;
-  border: 1px solid transparent;
-  border-radius: 2%;
+  border: none;
+  border-radius: 5%;
   cursor: pointer;
   box-sizing: border-box;
   margin: 0;
   text-decoration: none;
   width: auto;
+  outline: none;
 }
 
 /* footer CSS*/
