--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -86,14 +86,15 @@ text-decoration: none;
   background:#FF6600;
   color: black;
   text-align: center;
+  font-size: 14px;
   display: inline-block;
   justify-content: center;
   border: none;
-  border-radius: 5%;
+  border-radius: 10%;
   cursor: pointer;
   box-sizing: border-box;
   margin: 0;
-  padding: 10px 20px;
+  padding: 20px 40px;
   width: auto;
   height: auto;
   outline: none;
