paragraph styling again

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -61,6 +61,7 @@ header {
   font-family: sans-serif;
   text-align: center;
   margin: 0 auto;
+  padding: 0;
   line-height: 1.5;
   max-width: 900px;
 }
