--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -57,7 +57,7 @@ header {
     margin-bottom: 30px;
     padding-top:15px;
 }
-.p {
+p {
   font-family: sans-serif;
   text-align: center;
   margin: 0 auto;
