new images tshirt

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -107,6 +107,18 @@ text-decoration: none;
   -moz-appearance: none;
 }
 
+/*gallery css*/
+
+.pants {
+
+}
+.tshirts {
+
+}
+.shoes {
+
+}
+
 /* footer CSS*/
 .footer {
     margin-top: 40px;
