--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -111,7 +111,12 @@ text-decoration: none;
 
 }
 .tshirts {
-
+max-height: 500px;
+max-width: 300px;
+height: auto;
+width: auto;
+flex-wrap: wrap;
+display: inline-block
 }
 .shoes {
 
