--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -116,7 +116,9 @@ max-width: 300px;
 height: auto;
 width: auto;
 flex-wrap: wrap;
-display: inline-block
+display: inline-block;
+justify-content: center;
+align-items: center;
 }
 .shoes {
 
