--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -111,12 +111,10 @@ text-decoration: none;
 
 }
 .tshirts {
-max-height: 500px;
-max-width: 300px;
-height: auto;
-width: auto;
+height: 500px;
+width: 300px;
 flex-wrap: wrap;
-display: inline-block;
+display: flex;
 justify-content: center;
 align-items: center;
 }
