--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -109,10 +109,9 @@ text-decoration: none;
 
 .clothes {
 
-flex-wrap: wrap;
+  flex-wrap: wrap;
   display: flex;
   justify-content: center;
-  align-items: center;
   gap: 10px;
 }
 
@@ -120,6 +119,10 @@ flex-wrap: wrap;
 
 }
 .tshirts {
+display: flex;
+flex-direction: column;
+align-items: center;
+text-align: center;
 height: auto;
 width: auto;
 }
