--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -145,8 +145,10 @@ margin-bottom: 10px;
 
 .description {
   display: block;
+  width: 100%;
   margin-top: 10px;
   color: black;
+  margin-top: 5px;
 }
 
 /* footer CSS*/
