--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -60,6 +60,12 @@ header {
 
 header {
   color: black;
+  display: block;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 p {
@@ -121,8 +127,23 @@ text-decoration: none;
 }
 
 .pants {
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  height: auto;
+  width: auto;
 }
+
+.pants img .{
+  max-width: 500px;
+  max-height: 300px;
+  width: auto;
+  height: auto;
+  object-fit: cover;
+  margin-bottom: 10px;
+}
+
 .tshirts {
 display: flex;
 flex-direction: column;
@@ -140,7 +161,21 @@ object-fit: cover;
 margin-bottom: 10px;
 }
 .shoes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  height: auto;
+  width: auto;
+}
 
+.shoes img {
+max-width: 500px;
+max-height: 300px;
+width: auto;
+height: auto;
+object-fit: cover;
+margin-bottom: 10px;
 }
 
 .description {
