--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -63,7 +63,7 @@ header {
   display: block;
   width: 100%;
   text-align: center;
-  margin-bottom: 20px;
+  margin-top: 20px;
   font-size: 24px;
   font-weight: bold;
 }
@@ -135,7 +135,7 @@ text-decoration: none;
   width: auto;
 }
 
-.pants img .{
+.pants img {
   max-width: 500px;
   max-height: 300px;
   width: auto;
