--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -194,6 +194,29 @@ margin-bottom: 10px;
 
 }
 
+form {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+label {
+  width: 150px;
+  flex: 1;
+}
+
+input, textarea {
+  flex: 2;
+  width: 100%;
+
+}
+
+button {
+  width: 100%;
+  margin-top: 10px;
+}
+
 .social {
   display:flex;
   flex-wrap: wrap;
