--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -195,26 +195,29 @@ margin-bottom: 10px;
 }
 
 form {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 600px;
-  margin: 0 auto;
+width: auto;
+max-width: 100px;
+margin: 0 auto;
 }
 
 label {
-  width: 150px;
-  flex: 1;
+display: block;
+margin-bottom: 5px;
 }
 
 input, textarea {
-  flex: 2;
   width: 100%;
-
+  padding: 8px;
+  margin-bottom: 15px;
+  box-sizing: border-box;
 }
 
 button {
-  width: 100%;
-  margin-top: 10px;
+padding: 10px 15px;
+background-color: #FF6600;
+color: #333333;
+border: none;
+cursor: pointer;
 }
 
 .social {
