--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -96,11 +96,22 @@ p {
   margin: 20px;
 }
 
-.button {
-text-decoration: none;
-}
+
+/* button css */
+button {
+  padding: 10px 15px;
+  background-color: #FF6600;
+  color: #333333;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 16px;
+  outline: none;
+  }
+
 
 .button button {
+  text-decoration: none;
   background-color:#FF6600;
   background:#FF6600;
   color: black;
@@ -115,10 +126,10 @@ text-decoration: none;
   padding: 20px 40px;
   width: auto;
   height: auto;
-  outline: none;
 }
 
-/*gallery css*/
+
+/*portfolio gallery css*/
 
 .clothes {
 
@@ -212,16 +223,6 @@ input, textarea {
   padding: 8px;
   margin-bottom: 15px;
   box-sizing: border-box;
-}
-
-button {
-padding: 10px 15px;
-background-color: #FF6600;
-color: #333333;
-border: none;
-cursor: pointer;
-font-weight: bold;
-font-size: 16px;
 }
 
 .social {
