--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -231,6 +231,13 @@ map {
   align-items: center;
   width: 600px;
   height: 600px;
+  
+}
+
+map img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .social {
