--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -199,13 +199,7 @@ margin-bottom: 10px;
   margin-bottom: 20px;
 }
 
-/* footer CSS*/
-.footer {
-    margin-top: 40px;
-    text-align: center;
-    
 
-}
 
 form {
 width: auto;
@@ -225,11 +219,12 @@ input, textarea {
   box-sizing: border-box;
 }
 
+/* map contact page */
 .map {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 600px;
+  width: 800px;
   height: 600px;
   
 }
@@ -238,6 +233,12 @@ input, textarea {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+/* footer CSS*/
+.footer {
+  margin-top: 40px;
+  text-align: center;
 }
 
 .social {
