--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -232,12 +232,14 @@ input, textarea {
   align-items: center;
   width: 800px;
   height: 450px;
+  margin: 0 auto;
   
 }
 
 .map img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 /* footer CSS*/
